# hangman

./: .rustfmt.toml  Cargo.toml  README.md  build.rs
src/: colors.rs  game_state.rs  gui.rs  main.rs  utils.rs  window_size.rs  words.rs
